recursion.lessons.recursion.tree.Tree.scala.error
Tree:3: error: reassignment to val
if (steps=0){
         ^Tree:8: error: not found: value step
	tree(step-1,length*shrink,angle,shrink)
             ^Tree:11: error: not found: value step
	tree(step-1,length*shrink,angle,shrink)
             ^